--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5f880">  <td>23/11/08 11:15:34</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@612679d6]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="a5f880">  <td>23/11/10 16:05:27</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>23/11/08 11:15:31</td>   <td>-2780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_3_AllSpaces.afterTest()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@612679d6]">&lt;&lt;afterTest</td> 
+<tr bgcolor="faf8f2">  <td>23/11/10 16:05:24</td>   <td>-2608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>23/11/08 11:14:51</td>   <td>-42794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_3_AllSpaces.beforeTest()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@612679d6]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="faf8f2">  <td>23/11/10 16:04:52</td>   <td>-34690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>23/11/08 11:15:21</td>   <td>-13128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_3_AllSpaces.createNewSpaceMandatoryFields_TC_402()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@612679d6]">createNewSpaceMandatoryFields_TC_402</td> 
+<tr bgcolor="faf8f2">  <td>23/11/10 16:05:22</td>   <td>-5192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">exportNewAddSpace_verifyCompleteRecords_TC_209</td> 
   <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>23/11/08 11:14:51</td>   <td>-43030</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@612679d6]">&gt;&gt;loadConfig</td> 
+<tr bgcolor="a5f880">  <td>23/11/10 16:04:52</td>   <td>-34926</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">&gt;&gt;loadConfig</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
 </table>
