--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,70 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.marina.tests.Mod_6_BoatGroup</td>
+<td>com.marina.tests.Mod_4_Calendar</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>verifyBoatGroupPageOpens_TC_1001</td>
+<td>addedSpaceInCalendar_TC_601</td>
 <td>regression,sanity,smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>editBoatGroupVerifyData_TC_1008</td>
+<td>verifySpaceDataOnHover_TC_602</td>
 <td>regression,sanity,smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addBoatMainPage_TC_1007</td>
+<td>verifyDetailsSlipDetailPage_TC_603</td>
 <td>regression,sanity,smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addBoatGroupMandatoryFields_TC_1002</td>
+<td>reservNotUnavailable_TC_604</td>
 <td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>deleteBoatGroups_TC_1011</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>generatingMultipleAddRequest_TC_1009</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCopyFunctionBoatGroup_TC_1010</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>viewPageNewBoatAdd_TC_1006</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>viewSavedDataBoatGroup_TC_1005</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addBoatGroupAllFields_TC_1003</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>searchBoatGroup_TC_1004</td>
-<td>regression,sanity,smoke </td>
-=======
-<td>verifyLogin_Tc_001</td>
-<td>regression smoke sanity </td>
->>>>>>> refs/heads/Talha
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -77,16 +37,119 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeMethod</td>
+<td>beforeTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>afterMethod</td>
-=======
+<td>afterTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.marina.tests.Mod_3_AllSpaces</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteSpaceTypeSpacesDeleted_TC_416</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>exportSpaceGoogleSheet_TC_415</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addNoteFromViewSectionMustRead_TC_409</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAdditionalFieldsForUnAvailibility_TC_403</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySpecificSpaceViewSection_TC_406</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addNoteFromViewSection_TC_408</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>importSpacesBulk_TC_413</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAllSpacePage_TC_401</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickAddNoteBtnWithoutNotes_TC_410</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createNewSpaceAllFields_TC_404</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>exportSpaceExcel_TC_414</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>editRecordVerifyData_TC_407</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteNoteFromViewSpacePage_TC_411</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createNewSpaceMandatoryFields_TC_402</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteNoteFromEditSpace_TC_412</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySearchFeatureInDataTable_TC_405</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>afterTest</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -100,12 +163,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyDeleteSpace_TC_212</td>
+<td>exportNewAddSpace_verifyCompleteRecords_TC_209</td>
 <td>regression smoke sanity </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySpaceData_afterEdit_TC_208</td>
+<td>verifyDeleteSpace_TC_212</td>
 <td>regression smoke sanity </td>
 </tr>
 <tr>
@@ -115,7 +178,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySpacePage_Tc_201</td>
+<td>verifySpaceData_afterEdit_TC_208</td>
 <td>regression smoke sanity </td>
 </tr>
 <tr>
@@ -125,8 +188,18 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifySpacePage_Tc_201</td>
+<td>regression smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>exportSpacesGoogleSheet_TC_210</td>
+<td>regression smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>add_Spaces_Single_And_Carparking_Options_TC_213</td>
-<td>regression,smoke </td>
+<td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -135,12 +208,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyPopupAddSpace_TC_202</td>
+<td>verify_serachField_withSpaceName_TC_211</td>
 <td>regression smoke sanity </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verify_serachField_withSpaceName_TC_211</td>
+<td>verifyPopupAddSpace_TC_202</td>
 <td>regression smoke sanity </td>
 </tr>
 <tr>
@@ -159,7 +232,153 @@
 <tr>
 <td>&nbsp;</td>
 <td>afterTest</td>
->>>>>>> refs/heads/Talha
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.marina.tests.Mod_6_BoatGroup</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyBoatGroupPageOpens_TC_1001</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBoatMainPage_TC_1007</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>editBoatGroupVerifyData_TC_1008</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBoatGroupMandatoryFields_TC_1002</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>generatingMultipleAddRequest_TC_1009</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteBoatGroups_TC_1011</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyCopyFunctionBoatGroup_TC_1010</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>viewPageNewBoatAdd_TC_1006</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBoatGroupAllFields_TC_1003</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>viewSavedDataBoatGroup_TC_1005</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchBoatGroup_TC_1004</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.marina.tests.Mod_5_SpaceGroup</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchSlipByNameType_TC_805</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createGroupSameName_TC_807</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteExistingSpaceGroup_TC_808</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>editAlreadyExistingGroup_TC_806</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addSpaceGroupMultipleSpace_TC_804</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkReservSpacesAvail_TC_802</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addSpaceGroupSingleSpace_TC_803</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySpaceGroupPage_TC_801</td>
+<td>regression,sanity,smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
