--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,10 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.marina.base.TestBase.loadConfig</td></tr>
+<tr><td>com.marina.base.TestBase.loadConfig</td></tr>
+<tr><td>com.marina.base.TestBase.loadConfig</td></tr>
+<tr><td>com.marina.base.TestBase.loadConfig</td></tr>
+<tr><td>com.marina.base.TestBase.afterSuite</td></tr>
+<tr><td>com.marina.base.TestBase.afterSuite</td></tr>
+<tr><td>com.marina.base.TestBase.afterSuite</td></tr>
+<tr><td>com.marina.base.TestBase.afterSuite</td></tr>
 </table>
